# Testing

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
BinarySearch/: BinarySearch.cpp  CMakeLists.txt
Concurency/: CMakeLists.txt  Concurency.cpp  Concurency.h
LUTBenchmark/: CMakeLists.txt  LUTBenchmark.cpp  build.bat
LUTSearch/: CMakeLists.txt  LUTSearch.cpp  LUTSearch.h
Performance/: CMakeLists.txt  Performance.cpp
benchmark/: CMakeLists.txt
benchmark/src/: InterpolationSearchBenchmark.cpp  MapSearchBenchmark.cpp  STLSearchBenchmark.cpp  SearchStorageFixture.hpp  SlistSearchBenchmark.cpp  VectorTrieBenchmark.cpp  VectorTrieVarBenchmark.cpp
src/: InterpolationSearch.hpp  VectorTrie.hpp  VectorTrieVar.hpp
test/: CMakeLists.txt  main.cpp
